<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    android:padding="@dimen/distance_5dp"
    tools:context="com.lf.inote.MainActivity" >

    <LinearLayout
        android:id="@+id/ll_work_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round_corner_normal" >

        <Button
            android:id="@+id/btn_type_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_plain_button_left"
            android:padding="@dimen/distance_5dp"
            android:text="@string/text_type_note"
            android:textSize="@dimen/font_size_16sp" />

        <Button
            android:id="@+id/btn_type_tallybook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_plain_button_right"
            android:padding="@dimen/distance_5dp"
            android:text="@string/text_type_tally"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bill_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_work_type"
        android:layout_marginTop="@dimen/distance_5dp"
        android:background="@drawable/button_round_corner_normal" >

        <Button
            android:id="@+id/btn_bill_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_plain_button_left"
            android:padding="@dimen/distance_5dp"
            android:text="@string/text_bill_day"
            android:textSize="@dimen/font_size_12sp" />

        <Button
            android:id="@+id/btn_bill_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_plain_button"
            android:padding="@dimen/distance_5dp"
            android:text="@string/text_bill_month"
            android:textSize="@dimen/font_size_12sp" />

        <Button
            android:id="@+id/btn_bill_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_plain_button_right"
            android:padding="@dimen/distance_5dp"
            android:text="@string/text_bill_year"
            android:textSize="@dimen/font_size_12sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_note_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_main_total_info"
        android:layout_below="@+id/ll_bill_type"
        android:layout_marginTop="@dimen/distance_5dp" >

        <ListView
            android:id="@+id/lv_note_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round_corner_normal" />
        
        <ExpandableListView
            android:id="@+id/explv_bill_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_round_corner_normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_main_no_note_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/text_no_note_tips" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_main_total_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_add_note"
        android:layout_marginBottom="@dimen/distance_5dp"
        android:layout_marginTop="@dimen/distance_5dp"
        android:background="@drawable/selector_round_corner_button"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/distance_10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_main_total_income"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="总收入：￥0"
                android:textColor="@color/font_green_color"
                android:textSize="@dimen/font_size_16sp" />

            <TextView
                android:id="@+id/tv_main_total_expense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="总支出：￥0"
                android:textColor="@color/font_red_color"
                android:textSize="@dimen/font_size_16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_main_total_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="总结余：￥0"
            android:textColor="@color/font_orange_color"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/distance_5dp"
        android:background="@drawable/selector_round_corner_button"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/distance_10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add_note"
            android:gravity="center"
            android:text="@string/text_add_note"
            android:textColor="@color/font_major_color"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>

</RelativeLayout>