<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/distance_5dp"
    tools:context="com.lf.inote.EditBillActivity" >

    <LinearLayout
        android:id="@+id/ll_add_bill_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_5dp"
        android:background="@drawable/selector_round_corner_button"
        android:orientation="horizontal"
        android:padding="@dimen/distance_5dp" >

        <TextView
            android:id="@+id/tv_add_bill_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/calendar_s"
            android:gravity="center_vertical"
            android:text="2015-05-26"
            android:textColor="@color/font_major_color"
            android:textSize="@dimen/font_size_18sp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_add_bill_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_add_bill_date"
            android:layout_marginTop="@dimen/distance_5dp"
            android:background="@drawable/button_round_corner_normal" >
        
        <Button
            android:id="@+id/btn_bill_type_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/distance_5dp"
            android:background="@drawable/selector_plain_button_left"
            android:textSize="@dimen/font_size_16sp"
            android:text="@string/text_bill_income" />
        
        <Button
            android:id="@+id/btn_bill_type_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="-0.5dp"
            android:padding="@dimen/distance_5dp"
            android:background="@drawable/selector_plain_button_right"
            android:textSize="@dimen/font_size_16sp"
            android:text="@string/text_bill_expense" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_add_bill_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/distance_5dp"
        android:layout_below="@id/ll_add_bill_type"
        android:background="@drawable/selector_round_corner_button"
        android:orientation="horizontal"
        android:padding="@dimen/distance_5dp" >

        <EditText
            android:id="@+id/et_add_bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/rmb_icon"
            android:drawablePadding="@dimen/distance_5dp"
            android:gravity="center_vertical"
            android:background="@null"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:textColor="@color/font_major_color"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_add_bill_amount"
            android:layout_above="@+id/ll_add_bill_save"
            android:layout_marginTop="@dimen/distance_5dp"
            android:orientation="vertical"
            android:background="@drawable/button_round_corner_normal" >

            <com.lf.view.NoteEditText
                android:id="@+id/et_bill_remark"
                android:layout_width="fill_parent"
                android:layout_height="1000dp"
                android:gravity="top"
                android:lineSpacingExtra="@dimen/distance_5dp"
                android:padding="@dimen/distance_5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="备注"
                android:textColor="@color/font_major_color" />
        </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_add_bill_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/distance_5dp"
        android:layout_marginTop="@dimen/distance_5dp"
        android:background="@drawable/selector_round_corner_button"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/distance_10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add_note"
            android:gravity="center"
            android:text="@string/text_save"
            android:textColor="@color/font_major_color"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>

</RelativeLayout>